@@ -30,6 +30,8 @@
     * h5s
     * h6s
     * paragraphs
+    * labels
+    * file_fields
 === 2017-01-09
 * Enhancement
   * Added params class instance variable to hold hash values that can be used in the page
